# VkProjectRust

./: Cargo.toml  compile.bat  rustfmt.toml  vertexshader.spv  vertexshader.vert
src/: graphics.rs  log.rs  main.rs  maths.rs
src/graphics/: buffers.rs  commands.rs  device.rs  drawing.rs  errors.rs  extensions.rs  pipeline.rs  presentation.rs  textures.rs  vk_app.rs
src/maths/: matrix.rs  vector.rs
