[package]
name = "VkProjectRust"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
libc = "0.2.164"

[dependencies.windows]
version = "0.58.0"
features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System", "Win32_System_Console", "Win32_System_Threading"]
